# spectre

./: .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: GAME-SDK.md
engine/: Cargo.toml
engine/engine-core/: Cargo.toml
engine/engine-core/bindings/: MsgCalibrationStart.ts  MsgDanceBeat.ts  MsgDanceScore.ts  MsgJoined.ts  MsgMatchEnd.ts  MsgMatchStart.ts  MsgPong.ts  MsgPoseUpdate.ts  MsgRoundEnd.ts  MsgYouWereHit.ts  PoseKeypoint.ts
engine/engine-core/src/: broadcast.rs  commentator.rs  game_loop.rs  input_delay.rs  lib.rs  main.rs  protocol.rs  room.rs  room_manager.rs
engine/engine-core/tests/: protocol_roundtrip.rs
engine/engine-core/tests/fixtures/: msg_calibration_done.json  msg_calibration_start.json  msg_dance_beat.json  msg_dance_score.json  msg_game_state.json  msg_joined.json  msg_lobby_update.json  msg_match_end.json  msg_match_start.json  msg_ping.json  msg_player_disconnected.json  msg_pong.json  msg_pose_frame.json  msg_pose_update.json  msg_rematch_start.json  msg_round_end.json  msg_round_end_draw.json  msg_round_start.json  msg_you_were_hit.json
engine/fps-boxing-plugin/: Cargo.toml
engine/fps-boxing-plugin/src/: lib.rs
fps/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
mobile/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
overlay/: .gitignore  README.md  index.html  mock-server.cjs  package-lock.json  package.json  vite.config.ts
scripts/: dev.sh  (+4 more)
(+245 files in other folders)
