[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_core"
path = "src/lib.rs"

[[bin]]
name = "engine-core"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dashmap = "6.1.0"
tower-http = { version = "0.6.8", features = ["fs"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rand = "0.8.6"
futures-util = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
plugin-trait = { path = "../plugin-trait" }
boxing-plugin = { path = "../boxing-plugin" }
dance-plugin = { path = "../dance-plugin" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
